--- a/css/style.css
+++ b/css/style.css
@@ -501,6 +501,8 @@
 						ul.social li a.fa-blogger		{ background-color: #FF6501; }
 						ul.social li a.fa-flickr		{ background-color: #0062DB; }
 						ul.social li a.fa-vimeo			{ background-color: #4C8AB0; }
+                        ul.social li a.fa-wordpress		{ background-color: lightseagreen; }
+
 
 						ul.social li a:hover
 						{
